# SATySFi-ruby

./: .gitignore  Makefile  README.md  Satyristes  ruby.satyh  satysfi-ruby-doc.opam  satysfi-ruby.opam
doc/: ruby-ja.saty
