opam-version: "2.0"
name: "satysfi-ruby"
version: "0.1.2"
synopsis: "Japanese-style ruby in SATySFi"
description: """Japanese-style ruby in SATySFi."""

maintainer: "puripuri2100 <puripuri2100@gmail.com>"
authors: "puripuri2100 <puripuri2100@gmail.com>"
license: "MIT"
homepage: "https://github.com/puripuri2100/SATySFi-ruby"
bug-reports: "https://github.com/puripuri2100/SATySFi-ruby/issues"
dev-repo: "git+https://github.com/puripuri2100/SATySFi-ruby.git"

depends: [
  "satysfi" {>= "0.0.1" & < "0.0.6"}
  "satyrographos" {>= "0.0.2" & < "0.0.3"}
  "satysfi-dist"
]
build: [ ]
install: [
  ["satyrographos" "opam" "install"
    "-name" "ruby"
    "-prefix" "%{prefix}%"
    "-script" "%{build}%/Satyristes"]
]
